[package]
name = "flappy_bird"
version = "0.1.0"
authors = ["Evan Cameron <evan@vectorface.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.amethyst]
# version = "0.11"
# features = ["vulkan"]

[dependencies]
ggez = "0.5.0-rc.2"
rand = "*"